--- a/plugins/ViaVersion/config.yml
+++ b/plugins/ViaVersion/config.yml
@@ -58,6 +58,9 @@ tracking-max-kick-msg: '&4&oHai inviato -> &c%pps &4&o<- pacchetti a intermitten
 #                 MULTIPLE VERSIONS OPTIONS                #
 #----------------------------------------------------------#
 #
+# Whether to make sure ViaVersion's UserConnection object is already available in the PlayerJoinEvent.
+# You may disable this for faster startup/join time if you are 100% sure no plugin requires this.
+register-userconnections-on-join: true
 # Should we enable our hologram patch?
 # If they're in the wrong place enable this
 hologram-patch: true
@@ -112,7 +115,7 @@ vine-climb-fix: true
 ignore-long-1_16-channel-names: true
 #
 # Force 1.17+ client to accept the server resource pack; they will automatically disconnect if they decline.
-forced-use-1_17-resource-pack: false
+forced-use-1_17-resource-pack: true
 # The message to be displayed at the prompt when the 1.17+ client receives the server resource pack.
 resource-pack-1_17-prompt: ''
 #
@@ -124,9 +127,12 @@ cache-1_17-light: true
 chat-types-1_19:
   chat.type.text: <%s> %s
   chat.type.announcement: '[%s] %s'
-  commands.message.display.incoming: '%s whispers to you: %s'
+  commands.message.display.incoming: '%s ti ha sussurrato: %s'
   chat.type.team.text: '%s <%s> %s'
   chat.type.emote: '* %s %s'
+#
+# Force-update 1.19.4+ player's inventory when they try to swap armor in a pre-occupied slot.
+armor-toggle-fix: true
 #
 #----------------------------------------------------------#
 #             1.9+ CLIENTS ON 1.8 SERVERS OPTIONS          #
@@ -163,8 +169,6 @@ use-new-effect-indicator: true
 use-new-deathmessages: true
 # Should we cache our items, this will prevent server from being lagged out, however the cost is a constant task caching items
 item-cache: true
-# Patch the anti xray to work on 1.9+ (If your server is 1.8) This can cost more performance, so disable it if you don't use it.
-anti-xray-patch: true
 # Should we replace extended pistons to fix 1.10.1 (Only on chunk load)
 replace-pistons: true
 # What id should we replace with, default is air. (careful of players getting stuck standing on them)
